--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.23",
     "next": "16.1.1",
+    "postcss": "^8.5.6",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@types/node": "^20",
