--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@floating-ui/react": "^0.27.16",
     "@tanstack/react-query": "^5.90.19",
     "autoprefixer": "^10.4.23",
     "axios": "^1.13.2",
