--- a/package.json
+++ b/package.json
@@ -31,5 +31,6 @@
     "eslint": "^9",
     "eslint-config-next": "16.1.1",
     "typescript": "^5"
-  }
+  },
+  "packageManager": "pnpm@10.26.2"
 }
